# mdxera-erp

./: .env.local  .gitignore  ARCHITECTURE.md  App.tsx  Configuration.tsx  Dashboard.tsx  MaterialMaster.tsx  README.md  RELEASING.md  Reports.tsx  add_material_valuation_fields.sql  company_configuration_schema.sql  constants.tsx  index.css  index.html  index.tsx  logo_upload_display_options_update.sql  manifest.json  master_schema.sql  mbc_card_value_history.sql  metadata.json  package-lock.json  package.json  storageService.ts  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
components/: AddBusinessRoleModal.tsx  AddCategoryModal.tsx  AddCustomerModal.tsx  AddDistributorModal.tsx  AddMedicineModal.tsx  AddProductModal.tsx  AddPromotionModal.tsx  AddSubCategoryModal.tsx  AddSupplierModal.tsx  AddToStockModal.tsx  AdviceDiagnosticInvestigationsWorkflow.tsx  BarcodeScannerModal.tsx  BatchDetailModal.tsx  BatchSelectionModal.tsx  ChallanDetailModal.tsx  Chatbot.tsx  ConfirmModal.tsx  CustomerImportPreviewModal.tsx  CustomerSearchModal.tsx  DistributorImportPreviewModal.tsx  DistributorSyncView.tsx  DosageInstructions.tsx  EditCustomerModal.tsx  EditMedicineModal.tsx  EditProductModal.tsx  ExportCustomersModal.tsx  ExportInventoryModal.tsx  ExportOptionsModal.tsx  ExportPurchasesModal.tsx  ExportSalesModal.tsx  ExportSuppliersModal.tsx  (+52 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  system.rs
(+537 files in other folders)
